<resources>
	<string name="app_name">QuantumUnit</string>
	<string name="action_settings">Settings</string>
	<string name="length">Length</string>
	<string name="time">Time</string>
	<string name="mass">Mass</string>
	<string name="temperature">Temperature</string>
	<string name="amount_of_substance">Amount of Substance</string>
	<string name="amount">Amount</string>
	<string name="electricity">Electricity</string>
	<string name="electric_current">Electric Current</string>
	<string name="luminous_intensity">Luminous Intensity</string>
	<string name="luminosity">Luminosity</string>
	<string name="plane_angle">Plane Angle</string>
	<string name="solid_angle">Solid Angle</string>
	<string name="ic_quantumunit_description">Application Icon</string>
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="qube">Qube</string>
	<string name="convert">Convert</string>
	<string name="title_activity_time">TimeActivity</string>
	<string name="section_format">Hello World from section: %1$d</string>
</resources>
