<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".MainActivity"
	tools:showIn="@layout/activity_main">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="20dp"
			android:layout_marginTop="40dp"
			android:contentDescription="@string/ic_quantumunit_description"
			android:minHeight="100dp"
			android:minWidth="100dp"
			android:src="@drawable/ic_quantumunit_inverted"
			android:visibility="visible"
			app:srcCompat="@drawable/ic_quantumunit_inverted" />
		
		<GridLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center"
			android:gravity="center"
			android:layout_margin="20dp"
			android:columnCount="2"
			android:columnOrderPreserved="true">
			
			<Button
				android:id="@+id/bt_length"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="fill_horizontal"
				android:layout_columnWeight="0.5"
				android:layout_column="0"
				android:layout_row="0"
				android:contentDescription="@string/length"
				android:drawableTop="@drawable/ic_length"
				android:text="@string/length"
				android:textAllCaps="true"
				android:textColor="@android:color/background_light" />
			
			<Button
				android:id="@+id/bt_time"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="fill_horizontal"
				android:layout_columnWeight="0.5"
				android:layout_column="1"
				android:layout_row="0"
				android:contentDescription="@string/time"
				android:drawableTop="@drawable/ic_time"
				android:text="@string/time"
				android:textAllCaps="true"
				android:textColor="@android:color/background_light" />
			
			<Button
				android:id="@+id/bt_mass"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="fill_horizontal"
				android:layout_columnWeight="0.5"
				android:layout_column="0"
				android:layout_row="1"
				android:contentDescription="@string/mass"
				android:drawableTop="@drawable/ic_mass"
				android:text="@string/mass"
				android:textAllCaps="true"
				android:textColor="@android:color/background_light" />
			
			<Button
				android:id="@+id/bt_temperature"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="fill_horizontal"
				android:layout_columnWeight="0.5"
				android:layout_column="1"
				android:layout_row="1"
				android:contentDescription="@string/temperature"
				android:drawableTop="@drawable/ic_temperature"
				android:text="@string/temperature"
				android:textAllCaps="true"
				android:textColor="@android:color/background_light" />
			
			<Button
				android:id="@+id/bt_amount"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="fill_horizontal"
				android:layout_columnWeight="0.5"
				android:layout_column="0"
				android:layout_row="2"
				android:contentDescription="@string/amount_of_substance"
				android:drawableTop="@drawable/ic_amount"
				android:text="@string/amount"
				android:textAllCaps="true"
				android:textColor="@android:color/background_light" />
			
			<Button
				android:id="@+id/bt_electric"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="fill_horizontal"
				android:layout_columnWeight="0.5"
				android:layout_column="1"
				android:layout_row="2"
				android:contentDescription="@string/electric_current"
				android:drawableTop="@drawable/ic_electricity"
				android:text="@string/electric"
				android:textAllCaps="true"
				android:textColor="@android:color/background_light" />
			
			<Button
				android:id="@+id/bt_luminosity"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="fill_horizontal"
				android:layout_columnWeight="0.5"
				android:layout_column="0"
				android:layout_row="3"
				android:contentDescription="@string/luminous_intensity"
				android:drawableTop="@drawable/ic_luminosity"
				android:text="@string/luminosity"
				android:textAllCaps="true"
				android:textColor="@android:color/background_light" />
			
			<Button
				android:id="@+id/bt_plane_angle"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="fill_horizontal"
				android:layout_columnWeight="0.5"
				android:layout_column="1"
				android:layout_row="3"
				android:contentDescription="@string/plane_angle"
				android:drawableTop="@drawable/ic_plane_angle"
				android:text="@string/plane_angle"
				android:textAllCaps="true"
				android:textColor="@android:color/background_light" />
			
			<Button
				android:id="@+id/bt_solid_angle"
				style="?android:attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="fill_horizontal"
				android:layout_columnWeight="0.5"
				android:layout_column="0"
				android:layout_row="4"
				android:contentDescription="@string/solid_angle"
				android:drawableTop="@drawable/ic_solid_angle"
				android:text="@string/solid_angle"
				android:textAllCaps="true"
				android:textColor="@android:color/background_light" />
			
			<Space
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="fill_horizontal"
				android:layout_columnWeight="0.5"
				android:layout_column="1"
				android:layout_row="4"
				android:minWidth="50dp"
				android:minHeight="50dp"/>
		
		</GridLayout>
		
	</LinearLayout>

</ScrollView>